--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Unreal Battles - An Unreal Tournament 4 Community</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Unreal Battles</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,9 +53,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#links">Social Media</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
@@ -66,7 +66,7 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -78,52 +78,77 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Welcome To Unreal Battles!</div>
+                <div class="intro-heading">An Unreal Tournament 4 Community</div>
+                <a href="#links" class="page-scroll btn btn-xl">UB on the Web!</a>
             </div>
         </div>
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="links">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Unreal Battles on Social Media</h2>
+                    <h3 class="section-subheading text-muted">Catch us on the web--how about that?</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
+                    <a target="_blank" href="http://discord.unreal-battles.net"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <i class="fa fa-gamepad fa-stack-1x fa-inverse"></i>
+                    </span></a>
+                    <h4 class="service-heading">Discord</h4>
+                    <p class="text-muted">Where all the fun happens! Our Discord server is where all of our pick-up-games and events are organized--join us today!</p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
+                    <a target="_blank" href="http://donate.unreal-battles.net"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <i class="fa fa-paypal fa-stack-1x fa-inverse"></i>
+                    </span></a>
+                    <h4 class="service-heading">Donate</h4>
+                    <p class="text-muted">Like what we do? Support us by donating! Donations help us keep the servers up and fund event prizes!</p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
+                    <a target="_blank" href="http://facebook.unreal-battles.net"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                    </span></a>
+                    <h4 class="service-heading">Facebook</h4>
+                    <p class="text-muted">Join our Facebook group to connect with other players in the community and keep up on the latest news / announcements!</p>
+                </div>
+                <div class="col-md-4">
+                    <a target="_blank" href="http://www.unreal-battles.net"><span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
+                    </span></a>
+                    <h4 class="service-heading">Homepage</h4>
+                    <p class="text-muted">Visit our homepage... wait... you're already here--duh!</p>
+                </div>
+                <div class="col-md-4">
+                    <a target="_blank" href="http://twitch.unreal-battles.net"><span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-twitch fa-stack-1x fa-inverse"></i>
+                    </span></a>
+                    <h4 class="service-heading">Twitch</h4>
+                    <p class="text-muted">Subscribe to our Twitch channel to view the latest stream casts!</p>
+                </div>
+                <div class="col-md-4">
+                    <a target="_blank" href="http://youtube.unreal-battles.net"><span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                    </span></a>
+                    <h4 class="service-heading">YouTube</h4>
+                    <p class="text-muted">Subscribe to our YouTube page to view past PUGs, event matches, and featured frag clips!</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Portfolio Grid Section -->
+<!--
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -220,8 +245,9 @@
             </div>
         </div>
     </section>
-
+-->
     <!-- About Section -->
+<!--
     <section id="about">
         <div class="container">
             <div class="row">
@@ -301,8 +327,9 @@
             </div>
         </div>
     </section>
-
+-->
     <!-- Team Section -->
+<!--
     <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -365,11 +392,22 @@
             </div>
         </div>
     </section>
-
+-->
     <!-- Clients Aside -->
     <aside class="clients">
         <div class="container">
             <div class="row">
+              <div class="col-md-3 col-sm-6">
+                  <a target="_blank" href="https://www.epicgames.com/unrealtournament/">
+                      <img src="img/logos/Epic.png" class="img-responsive img-centered" alt="Epic Games">
+                  </a>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <a target="_blank" href="http://play.eslgaming.com/new-games/pc/news/261555">
+                      <img src="img/logos/ESL.png" class="img-responsive img-centered" alt="ESL">
+                  </a>
+              </div>
+              <!--
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
                         <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
@@ -390,11 +428,13 @@
                         <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+              -->
             </div>
         </div>
     </aside>
 
     <!-- Contact Section -->
+<!--
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -438,23 +478,26 @@
             </div>
         </div>
     </section>
-
+-->
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2016</span>
+                    <span class="copyright">Copyright &copy; Unreal-Battles.net 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a target="_blank" href="http://discord.unreal-battles.net"><i class="fa fa-gamepad"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a target="_blank" href="http://facebook.unreal-battles.net"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a target="_blank" href="http://twitch.unreal-battles.net"><i class="fa fa-twitch"></i></a>
+                        </li>
+                        <li><a target="_blank" href="http://youtube.unreal-battles.net"><i class="fa fa-youtube"></i></a>
                         </li>
                     </ul>
                 </div>
+                <!--
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
                         <li><a href="#">Privacy Policy</a>
@@ -463,6 +506,7 @@
                         </li>
                     </ul>
                 </div>
+              -->
             </div>
         </div>
     </footer>
