More Content Updated.

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                     </li>
                     <!--<li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
+                    </li>-->
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#timeline">Timeline</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Unreal Battles!</div>
-                <div class="intro-heading">An Unreal Tournament 4 Community</div>
+                <div class="intro-heading">A UT4 Community</div>
                 <a href="#links" class="page-scroll btn btn-xl">UB on the Web!</a>
             </div>
         </div>
@@ -247,13 +247,13 @@
     </section>
 -->
     <!-- About Section -->
-<!--
-    <section id="about">
+
+    <section id="timeline">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Timeline</h2>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
@@ -265,11 +265,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>July 2016</h4>
+                                    <h4 class="subheading">Unreal Battles is Born</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Unreal Battles was founded to serve the UT4 instagib community!</p>
                                 </div>
                             </div>
                         </li>
@@ -279,11 +279,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>Summer 2016</h4>
+                                    <h4 class="subheading">iDuel Cup</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Godlike.no won the iDuel Cup!</p>
                                 </div>
                             </div>
                         </li>
@@ -293,11 +293,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>Fall 2016</h4>
+                                    <h4 class="subheading">2v2 iCTF Cup</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Avaris and qbit won the 2v2 iCTF Cup!</p>
                                 </div>
                             </div>
                         </li>
@@ -307,11 +307,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>Winter 2016-2017</h4>
+                                    <h4 class="subheading">Draft iCTF Cup</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Team Identity won the Draft iCTF Cup!</p>
                                 </div>
                             </div>
                         </li>
@@ -319,7 +319,7 @@
                             <div class="timeline-image">
                                 <h4>Be Part
                                     <br>Of Our
-                                    <br>Story!</h4>
+                                    <br>Legacy!</h4>
                             </div>
                         </li>
                     </ul>
@@ -327,7 +327,7 @@
             </div>
         </div>
     </section>
--->
+
     <!-- Team Section -->
 <!--
     <section id="team" class="bg-light-gray">
@@ -399,12 +399,12 @@
             <div class="row">
               <div class="col-md-3 col-sm-6">
                   <a target="_blank" href="https://www.epicgames.com/unrealtournament/">
-                      <img src="img/logos/Epic.png" class="img-responsive img-centered" alt="Epic Games">
+                      <img src="img/logos/UTLogo.png" class="img-responsive img-centered" alt="Epic Games">
                   </a>
               </div>
               <div class="col-md-3 col-sm-6">
                   <a target="_blank" href="http://play.eslgaming.com/new-games/pc/news/261555">
-                      <img src="img/logos/ESL.png" class="img-responsive img-centered" alt="ESL">
+                      <img src="img/logos/ESLLogo.png" class="img-responsive img-centered" alt="ESL">
                   </a>
               </div>
               <!--
