Even more content updated.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Unreal Battles!</div>
                 <div class="intro-heading">A UT4 Community</div>
-                <a href="#links" class="page-scroll btn btn-xl">UB on the Web!</a>
+                <a target="_blank" href="http://discord.unreal-battles.net" class="page-scroll btn btn-xl">Join us on Discord!</a>
             </div>
         </div>
     </header>
@@ -101,7 +101,7 @@
                         <i class="fa fa-gamepad fa-stack-1x fa-inverse"></i>
                     </span></a>
                     <h4 class="service-heading">Discord</h4>
-                    <p class="text-muted">Where all the fun happens! Our Discord server is where all of our pick-up-games and events are organized--join us today!</p>
+                    <p class="text-muted">Join in on the action and community base at the Unreal Battles Discord!</p>
                 </div>
                 <div class="col-md-4">
                     <a target="_blank" href="http://donate.unreal-battles.net"><span class="fa-stack fa-4x">
@@ -293,7 +293,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Fall 2016</h4>
+                                    <h4>Autumn 2016</h4>
                                     <h4 class="subheading">2v2 iCTF Cup</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -307,11 +307,25 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
+                                    <h4>Autumn 2016</h4>
+                                    <h4 class="subheading">3v3 iCTF Cup</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Cool People (Serg, Fonzie, Kaster_Troy, and Anzuof) won the 3v3 iCTF Cup!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/5.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
                                     <h4>Winter 2016-2017</h4>
                                     <h4 class="subheading">Draft iCTF Cup</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Team Identity won the Draft iCTF Cup!</p>
+                                    <p class="text-muted">Team Identity (Captain: Erikjnz) won the Draft iCTF Cup!</p>
                                 </div>
                             </div>
                         </li>
