Updated content with staff section.

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <li>
                         <a class="page-scroll" href="#timeline">Timeline</a>
                     </li>
-                    <!--<li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
                     <li>
+                        <a class="page-scroll" href="#staff">Staff</a>
+                    </li>
+                    <!--<li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>-->
                 </ul>
@@ -343,70 +343,92 @@
     </section>
 
     <!-- Team Section -->
-<!--
-    <section id="team" class="bg-light-gray">
+
+    <section id="staff" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">The Unreal Battles Staff</h2>
+                    <h3 class="section-subheading text-muted">We're making UT4 instagib...</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <img src="img/team/weedman.jpg" class="img-responsive img-circle" alt="">
+                        <h4>WeeDMaN</h4>
+                        <p class="text-muted">Event Manager | Game Admin | Webmaster</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <img src="img/team/dev.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Dev</h4>
+                        <p class="text-muted">Event Manager</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <img src="img/team/loque.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Loque</h4>
+                        <p class="text-muted">Event Manager</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/jt.jpg" class="img-responsive img-circle" alt="">
+                        <h4>JT</h4>
+                        <p class="text-muted">Game Admin</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/mutator.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Mutator</h4>
+                        <p class="text-muted">Game Admin</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/waterkater.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Waterkater</h4>
+                        <p class="text-muted">Game Admin</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/supsun.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Supsun</h4>
+                        <p class="text-muted">Hub Admin</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/darkhell.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Darkhell</h4>
+                        <p class="text-muted">Hub Admin</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/abhicatastrophe.jpg" class="img-responsive img-circle" alt="">
+                        <h4>AbhiCatastrophe</h4>
+                        <p class="text-muted">Hub Admin | Webmaster</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">... great again!</p>
                 </div>
             </div>
         </div>
     </section>
--->
+
     <!-- Clients Aside -->
     <aside class="clients">
         <div class="container">
