--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </header>
 
     <!-- Services Section -->
-    <section id="links">
+    <section id="links" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
