Minor content updates.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Unreal Battles - An Unreal Tournament 4 Community</title>
+    <title>Unreal Battles - An Unreal Tournament Community</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Unreal Battles!</div>
-                <div class="intro-heading">A UT4 Community</div>
+                <div class="intro-heading">An UT Community</div>
                 <a target="_blank" href="http://discord.unreal-battles.net" class="page-scroll btn btn-xl">Join us on Discord!</a>
             </div>
         </div>
@@ -325,7 +325,7 @@
                                     <h4 class="subheading">Draft iCTF Cup</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Team Identity (Captain: Erikjnz) won the Draft iCTF Cup!</p>
+                                    <p class="text-muted">Team Identity (Erikjnz, Evayuna, Loque, r3v0lt3, Skandalouz, and Drakir) won the Draft iCTF Cup!</p>
                                 </div>
                             </div>
                         </li>
