Updated Weedman's title.

--- a/index.html
+++ b/index.html
@@ -355,13 +355,6 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/weedman.jpg" class="img-responsive img-circle" alt="">
-                        <h4>WeeDMaN</h4>
-                        <p class="text-muted">Event Manager | Game Admin | Webmaster</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
                         <img src="img/team/dev.jpg" class="img-responsive img-circle" alt="">
                         <h4>Dev</h4>
                         <p class="text-muted">Event Manager</p>
@@ -372,6 +365,13 @@
                         <img src="img/team/loque.jpg" class="img-responsive img-circle" alt="">
                         <h4>Loque</h4>
                         <p class="text-muted">Event Manager</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/weedman.jpg" class="img-responsive img-circle" alt="">
+                        <h4>WeeDMaN</h4>
+                        <p class="text-muted">Game Admin | Webmaster</p>
                     </div>
                 </div>
             </div>
@@ -435,7 +435,7 @@
             <div class="row">
               <div class="col-md-3 col-sm-6">
                   <a target="_blank" href="https://www.epicgames.com/unrealtournament/">
-                      <img src="img/logos/UTLogo.png" class="img-responsive img-centered" alt="Epic Games">
+                      <img src="img/logos/UTLogo.png" class="img-responsive img-centered" alt="Unreal Tournament">
                   </a>
               </div>
               <div class="col-md-3 col-sm-6">
