--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Unreal Battles!</div>
-                <div class="intro-heading">An UT Community</div>
+                <div class="intro-heading">The UT Instagib Community</div>
                 <a target="_blank" href="http://discord.unreal-battles.net" class="page-scroll btn btn-xl">Join us on Discord!</a>
             </div>
         </div>
