Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -434,13 +434,23 @@
         <div class="container">
             <div class="row">
               <div class="col-md-3 col-sm-6">
-                  <a target="_blank" href="https://www.epicgames.com/unrealtournament/">
-                      <img src="img/logos/UTLogo.png" class="img-responsive img-centered" alt="Unreal Tournament">
+                  <a target="_blank" href="https://www.allnoobs.com/">
+                      <img src="img/logos/ANLogo.png" class="img-responsive img-centered" alt="ESL">
                   </a>
               </div>
               <div class="col-md-3 col-sm-6">
                   <a target="_blank" href="http://play.eslgaming.com/new-games/pc/news/261555">
                       <img src="img/logos/ESLLogo.png" class="img-responsive img-centered" alt="ESL">
+                  </a>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <a target="_blank" href="http://www.passionategaming.net/">
+                      <img src="img/logos/PGLogo.png" class="img-responsive img-centered" alt="ESL">
+                  </a>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <a target="_blank" href="https://www.epicgames.com/unrealtournament/">
+                      <img src="img/logos/UTLogo.png" class="img-responsive img-centered" alt="Unreal Tournament">
                   </a>
               </div>
               <!--
