--- a/index.html
+++ b/index.html
@@ -355,21 +355,21 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/dev.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Dev</h4>
-                        <p class="text-muted">Event Manager</p>
+                        <img src="" class="img-responsive img-circle" alt="">
+                        <h4></h4>
+                        <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/loque.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/loque.jpg" class="img-responsive img-circle" alt="Loque">
                         <h4>Loque</h4>
                         <p class="text-muted">Event Manager</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/weedman.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/weedman.jpg" class="img-responsive img-circle" alt="WeedMaN">
                         <h4>WeeDMaN</h4>
                         <p class="text-muted">Game Admin | Webmaster</p>
                     </div>
@@ -378,21 +378,21 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/jt.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/jt.jpg" class="img-responsive img-circle" alt="JT">
                         <h4>JT</h4>
                         <p class="text-muted">Game Admin</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/mutator.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/mutator.jpg" class="img-responsive img-circle" alt="Mutator">
                         <h4>Mutator</h4>
                         <p class="text-muted">Game Admin</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/waterkater.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/waterkater.jpg" class="img-responsive img-circle" alt="Waterkater">
                         <h4>Waterkater</h4>
                         <p class="text-muted">Game Admin</p>
                     </div>
@@ -401,21 +401,21 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/supsun.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/supsun.jpg" class="img-responsive img-circle" alt="Supsun">
                         <h4>Supsun</h4>
                         <p class="text-muted">Hub Admin</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/darkhell.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Darkhell</h4>
+                        <img src="img/team/darkhell.jpg" class="img-responsive img-circle" alt="DarkHell">
+                        <h4>DarkHell</h4>
                         <p class="text-muted">Hub Admin</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/abhicatastrophe.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/abhicatastrophe.jpg" class="img-responsive img-circle" alt="AbhiCatastrophe">
                         <h4>AbhiCatastrophe</h4>
                         <p class="text-muted">Hub Admin | Webmaster</p>
                     </div>
