Updated Clan Cup Results in Timeline

--- a/index.html
+++ b/index.html
@@ -331,6 +331,22 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/6.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Spring 2017</h4>
+                                    <h4 class="subheading">5v5 Clan iCTF Cup</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">iF won Division 1!</p>
+                                    <p class="text-muted">Beer and Chips won Division 2!</p>
+                                    <p class="text-muted">Divine won Division 3!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
                                 <h4>Be Part
                                     <br>Of Our
                                     <br>Legacy!</h4>
